# WebCrawler

./: .gitignore  docker-compose.yml  pyproject.toml
containers/crawler/crawler/: pipelines.py  settings.py
containers/scheduler_ingest/config/: ingest.yaml
containers/scheduler_ingest/feature_extractor/: service.py
containers/scheduler_ingest/ingestor/: service.py
containers/scheduler_ingest/router/: service.py
containers/scheduler_ingest/stats/: service.py
docs/: 01-system-architecture.md  02-container-runtime-design.md  03-data-flow-and-ipc.md  04-sql-schema-design.md  05-docker-settings-and-deployment.md  06-ipc-backend-comparison.md  README.md
libs/db/models/content/: mixins.py
libs/db/models/domain/: state.py  stats_daily.py
libs/db/models/url/: mixins.py
libs/ipc/: bus.py  bus_fs.py  bus_redis.py  jsonio.py
scripts/: init_db.py  seed_urls.py
tests/: bench_bus.py  test_bus.py
